Updates for code style